--- a/css/style.scss
+++ b/css/style.scss
@@ -463,7 +463,7 @@ h2 {
 
 .events-section {
     background: #334d69;
-    border: 1px solid #334d69;
+    
     padding-bottom: 120px;
     h2 {
         margin-bottom: 40px;
@@ -517,11 +517,9 @@ footer {
 /* Helpers for top position on internal page links
 ====================================================*/
 // #spytop:before,
-.all-padding:before {
-    display: block;
-    content: " ";
-    visibility: hidden;
-    margin-top: 120px;
+.all-padding {
+   
+    padding-top: 120px;
 }
 
 /* jQuery Styles
