trying to fix skew issues

--- a/css/style.css
+++ b/css/style.css
@@ -840,7 +840,7 @@ h2 {
     margin-bottom: 160px; }
 
 .events-section {
-  background: #334d69;
+  background: #3fa6ad;
   padding-bottom: 120px; }
   .events-section h2 {
     margin-bottom: 40px; }
