--- a/css/style.scss
+++ b/css/style.scss
@@ -462,7 +462,7 @@ h2 {
 // ===================================*/
 
 .events-section {
-    background: #334d69;
+    background: #3fa6ad;
     
     padding-bottom: 120px;
     h2 {
