--- a/css/style.css
+++ b/css/style.css
@@ -608,7 +608,8 @@ footer {
 .section-img {
   width: 100%;
   margin-top: -18px;
-  margin-bottom: 82px; }
+  margin-bottom: 82px;
+  outline: 1px solid transparent; }
 
 .skew {
   -webkit-transform: skewY(-3deg);
@@ -736,10 +737,9 @@ footer {
   margin-top: 0px;
   border: 1px solid #3fa6ad;
   padding-bottom: 120px; }
-
-h2 {
-  text-align: center;
-  padding-bottom: 90px; }
+  .rental-section h2 {
+    text-align: center;
+    padding-bottom: 90px; }
 
 .rental-bar {
   background: #1e2e41;
