--- a/css/style.scss
+++ b/css/style.scss
@@ -156,6 +156,7 @@ footer {
     width: 100%;
     margin-top: -18px;
     margin-bottom: 82px;
+    outline:1px solid transparent;
 }
 
 .skew {
@@ -322,13 +323,13 @@ footer {
     margin-top: 0px;
     border: 1px solid #3fa6ad;
     padding-bottom: 120px;
-}
+
 
 h2 {
     text-align: center;
     padding-bottom: 90px;
 }
-
+}
 .rental-bar {
     background: #1e2e41;
     height: 30px;
