added new hero img

--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -26,15 +26,15 @@ h2,
 }
 
 .first {
-    background-image: url(http://mccormicks.kangamarketing.com/wp-content/uploads/2014/12/slide-2.jpg);
+    background-image: url(../images/air.jpg);
     background-size: cover;
-    background-position: center center;
+    background-position: 70%;
     background-repeat: no-repeat;
 }
 
 .second {
-    background-image: url(../images/chill-dock.jpg);
-    background-position: 70% 0%;
+    background-image: url(http://skimccormick.com/wp-content/uploads/2014/12/slide4.jpg);
+    background-position: 50% 50%;
 }
 
 ul {
