--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -1,4 +1,5 @@
 @media (min-width: 992px) {
+
     .navbar-toggle {
         display: none;
     }
@@ -8,6 +9,7 @@ h2,
 .h2 {
     margin-top: 0px;
     margin-bottom: 0px;
+
 }
 
 .col-md-4 {
@@ -15,27 +17,32 @@ h2,
     padding-left: 0;
 }
 
-.container {
-    max-width: 90%;
-    overflow: hidden;
-}
+
 
 .item {
     background-size: cover;
-    min-height: 500px;
+    min-height: 550px;
 }
 
 .first {
     background-image: url(../images/air.jpg);
     background-size: cover;
-    background-position: 70%;
+    background-position: 70% ;
     background-repeat: no-repeat;
 }
 
 .second {
-    background-image: url(http://skimccormick.com/wp-content/uploads/2014/12/slide4.jpg);
-    background-position: 50% 50%;
+    background-image: url(http://www.alliancewake.com/wp-content/uploads/2011/03/1600x1000fooshee.jpg);
+    background-position: 50% 0;
 }
+
+
+// .third{
+//     background-image: url(../images/ramp-air.jpg);
+//     background-position: 0 0;
+//         background-repeat: no-repeat;
+// }
+
 
 ul {
     padding-left: 0;
