--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -1,4 +1,5 @@
 @media (min-width: 480px) {
+
     p {
         font-size: 18px;
     }
@@ -12,7 +13,7 @@
         margin-top: -120px;
     }
       h2 {
-        font-size: 100px;
+        font-size: 80px;
     }
 }
 
@@ -27,10 +28,17 @@
 }
 
 @media screen and (min-width: 992px) {
-    .container {
-        max-width: 80%;
-    }
 
+
+
+    .container {
+        max-width: 90%;
+    }
+.navbar-collapse{
+    li{
+        box-shadow:none;
+    }
+}
 
     .read-btn {
     margin-bottom:0;
@@ -61,6 +69,7 @@
             margin-bottom: 0;
         }
 
+
 .location-section{
     margin-top:-200px;
 }
@@ -75,7 +84,7 @@
 
         .member-btn {
             margin: 30px auto;
-            width:50%;
+            width:33%;
         }
     }
   
@@ -129,6 +138,7 @@
            
         }
     }
+
     
 }
   
@@ -139,7 +149,10 @@
     }
 }
 
-
+        .wavier-btn{
+        width:25%;
+        margin:30px auto;
+    }
 
 }
 
