--- a/css/style.scss
+++ b/css/style.scss
@@ -29,8 +29,8 @@
         font-size: 45px;
         font-family: 'Pacifico', cursive;
         display: inline-block;
-        margin: 0;
-        transform: rotate(-8deg);
+        margin-top: 10px;
+        transform: rotate(-10deg);
       
         color: #faba56;
     }
