--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,39 @@
 @import url(http://fonts.googleapis.com/css?family=Pacifico);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
-@media (min-width: 992px) {
+@media (max-width: 1100px) {
+  .navbar-header {
+    float: none; }
+
+  .navbar-left, .navbar-right {
+    float: none !important; }
+
   .navbar-toggle {
-    display: none; } }
+    display: block; }
+
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); }
+
+  .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px; }
+
+  .navbar-collapse.collapse {
+    display: none !important; }
+
+  .navbar-nav {
+    float: none !important;
+    margin-top: 7.5px; }
+
+  .navbar-nav > li {
+    float: none; }
+
+  .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px; }
+
+  .collapse.in {
+    display: block !important; } }
 h2,
 .h2 {
   margin-top: 0px;
@@ -517,8 +548,8 @@ li {
     font-size: 45px;
     font-family: 'Pacifico', cursive;
     display: inline-block;
-    margin: 0;
-    transform: rotate(-8deg);
+    margin-top: 10px;
+    transform: rotate(-10deg);
     color: #faba56; }
   .logo p {
     text-align: right;
@@ -962,12 +993,11 @@ footer {
     display: inline-block; }
     .logo h1 {
       font-size: 115px;
-      font-family: 'Pacifico', cursive;
-      display: inline-block;
-      margin: 0;
-      transform: rotate(-8deg);
-      margin-top: 60px;
-      color: #faba56; }
+      margin-top: 20px; }
+
+  .wavier-section .wavier-btn {
+    width: 30%;
+    margin: 30px auto; }
 
   nav .container {
     padding-left: 0; }
@@ -1038,11 +1068,7 @@ footer {
       display: block; }
 
   .events-section li {
-    box-shadow: none; }
-
-  .wavier-btn {
-    width: 25%;
-    margin: 30px auto; } }
+    box-shadow: none; } }
 @media screen and (min-width: 1200px) {
   .prices-container, .rental-prices {
     margin-right: .45%;
